
AdminSearch
  - New module for searching for tags and any content in templates

CMSContentManager
  - New module for content editing.
  - Pagination and filtering in listcontent
  - Implements content locking
  - Implements dirty form checking 

DesignManager
  - New module for managing templates, stylesheets
  - Implements dirty form checking
  - Implements locking for templates
 
News 
  - Each article now has a searchable option
  - More bulk actions
  - A dropdown field type
  - The ability to re-organize categories
  - Numerous UI improvements
  - Minor bug fixes
  - Implements dirty form checking
  - Query rework (post date is now used as a start date if expiry is not specified)
  - Rewrote fesubmit action to show new 2.0 form functionality (fesubmit action is still deprecated)
  - Uses new CmsLayout API's for template management

Search
  - No longer indexes templates, or GCB's
  - rewrite the re-index stuff to hopefully use a bit less memory (at least for content pages)
  - Uses new CmsLayout API's for template management

ModuleManager
  - Compete rewrite
  - Includes functionality to interact with local modules
  - Now shows release dates and approximate download counts for each module
  - Now shows summary of releases for a specific module
  - Visual indicators for stale and new modules
  
  
Version 1.11.10 - Pinzon
------------------------
Core - General
  - New versions of jquery, jquery-ui, blueimp-uploader
  - Makes security key 16 characters long
  - Smarty template engine upgraded to version 3.1.16
  - Fixes to function signatures, and fix a notice in cms_module_smarty_plugin_manager
  
Core - MicroTiny
  - Minor fix to MicroTiny
  
Core - FileManager
  - Fix and cleanup filemanager templates

Core - News
 - Fix potential SQL injection vulnerability wrt the sortby parameter

Version 1.11.9 - Bartolome
-----------------------------
Core - General
  - Fixes version.php to represent new schema